Worker: Refine pending activity management on InProcessWorkerMessagingProxy

This CL...

(1) renames m_workerGlobalScopeMayHavePendingActivities to
    m_workerGlobalScopeHasPendingActivities. InProcessWorkerMessagingProxy
    cannot know the exact current state of pending activities on the worker
    context because it's in a separate thread, so the field name contained
    'may'. This would be confusing and pointless from caller's point of view.

(2) stops checking m_unconfirmedMessageCount in hasPendingActivity() in favor of
    m_workerGlobalScopeHasPendingActivities. When the count is greater than 0,
    m_workerGlobalScopeHasPendingActivities should be true.

(3) removes workerGlobalScopeMayHavePendingActivity() from
    InProcessWorkerMessagingProxyForTest because it's the same with
    hasPendingActivity() after (2).

Note that this CL does not change behavior.

BUG=655089

Review-Url: https://codereview.chromium.org/2555673002
Cr-Commit-Position: refs/heads/master@{#436549}

Former-commit-id: 9d2e15b7c11d53baa8226bad662b26663838e035